fixed horizontal scroll

--- a/style.scss
+++ b/style.scss
@@ -20,6 +20,7 @@ nav a, .menu ul li a, .menu ul li a:hover {
 }
 body{
   font-family: 'Raleway';
+  overflow-x: hidden;
 }
 nav{
   padding: 0.5em;
